--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<mat-toolbar color="primary">
-  <span>Nabhik Seva Mandal</span>
-</mat-toolbar>
+<app-header></app-header>
+<router-outlet></router-outlet>
